# 25-Day-Agents-Course-by-Google

./: .gitignore  README.md  pyproject.toml
day-08/: __init__.py
day-11/: google_managed_mcp.ipynb
day-12/: multimodal_streaming_agents.ipynb
day-15/: README.md  a2ui.py  day-15-a2ui.ipynb
day-16/: README.md  requirements.txt
day-19/: README.md  __init__.py
day-20/: README.md
day-21/: README.md  agent_design_patterns.ipynb
day-22/: README.md  security_guardrails.ipynb
day-23/: README.md  durable_agents.ipynb
day-24/: README.md  a2a_agents.ipynb
day-25/: README.md  course_recap.ipynb
day-25/retail-ai-location-strategy/: .env.example  DEVELOPER_GUIDE.md  Makefile  README.md  pyproject.toml  requirements.txt
day-25/retail-ai-location-strategy/app/: agent.py  config.py
day-25/retail-ai-location-strategy/app/callbacks/: __init__.py  pipeline_callbacks.py
day-25/retail-ai-location-strategy/app/frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
day-25/retail-ai-location-strategy/app/frontend/app/: globals.css  layout.tsx  page.tsx
day-25/retail-ai-location-strategy/app/frontend/app/api/copilotkit/: route.ts
day-25/retail-ai-location-strategy/app/frontend/backend/: main.py  requirements.txt
day-25/retail-ai-location-strategy/app/frontend/components/: AlternativeLocations.tsx  ArtifactViewer.tsx  CollapsibleStep.tsx  CompetitorCard.tsx  LocationReport.tsx  MarketCard.tsx  PipelineProgress.tsx  PipelineTimeline.tsx  ScrollableMarkdown.tsx  StepOutputContent.tsx  TabbedGapAnalysis.tsx  ToolCallRenderer.tsx  index.ts
day-25/retail-ai-location-strategy/app/schemas/: __init__.py  report_schema.py
day-25/retail-ai-location-strategy/app/sub_agents/: __init__.py
day-25/retail-ai-location-strategy/app/sub_agents/competitor_mapping/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/gap_analysis/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/infographic_generator/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/intake_agent/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/market_research/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/report_generator/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/sub_agents/strategy_advisor/: __init__.py  agent.py
day-25/retail-ai-location-strategy/app/tools/: __init__.py  html_report_generator.py  image_generator.py  places_search.py
day-25/retail-ai-location-strategy/notebook/: retail_ai_location_strategy_gemini_3.ipynb
day_01/: README.md  __init__.py  main.py
day_02/: README.md  __init__.py  hello_world_yaml.ipynb  tools.py
day_03/: README.md  __init__.py  gemini_search_agent.ipynb  root_agent.yaml
day_04/: README.md  deploy.sh
day_05/: README.md  telemetry_demo.py
day_06/: README.md  day06_ide_context.ipynb
day_07/: README.md  __init__.py  code_execution.ipynb
day_08/: context_management.ipynb
day_09/: agent.py  day-09-session-rewind.ipynb  main.py
day_10/: context_caching_compaction.ipynb
day_12/: multimodal_streaming_agents.ipynb
day_13/: interactions_api.ipynb
day_14/: README.md  run_demo.py
day_15/: server.py
day_16/: .gitignore  README.md
day_17/: README.md  __init__.py  adaptive_thinking_demo.ipynb  (+1 more)
(+40 files in other folders)
